add some coins, update switchpool script to accept host/port parameters to change remote miners

--- a/cryptoSwitcher.config.sample
+++ b/cryptoSwitcher.config.sample
@@ -24,6 +24,7 @@ mineCAP = False
 mineCGB = False
 mineCNC = False
 mineCRC = False
+mineDEM = False
 mineDGC = False
 mineEMD = False
 mineELC = False
@@ -50,7 +51,9 @@ mineSPT = False
 mineSBC = False
 mineTGC = False
 mineTRC = False
+mineUNO = False
 mineWDC = False
+mineXJO = False
 mineZET = False
 
 # Listed against LTC only (currently unusable by CS)
@@ -99,6 +102,7 @@ CGBscript =
 CNCscript = 
 CRCscript = 
 DBLscript = 
+DEMscript = 
 DGCscript = 
 EMDscript = 
 ELCscript = 
@@ -130,7 +134,9 @@ SPTscript =
 SBCscript = 
 TGCscript = 
 TRCscript = 
+UNOscript = 
 WDCscript = 
+XJOscript = 
 YACscript = 
 ZETscript = 
 
@@ -159,6 +165,7 @@ feeCGB = 0
 feeCNC = 0
 feeCRC = 0
 feeDBL = 0
+feeDEM = 0
 feeDGC = 0
 feeEMD = 0
 feeELC = 0
@@ -190,7 +197,9 @@ feeSPT = 0
 feeSBC = 0
 feeTGC = 0
 feeTRC = 0
+feeUNO = 0
 feeWDC = 0
+feeXJO = 0
 feeYAC = 0
 feeZET = 0
 
@@ -273,6 +282,7 @@ sellCGB = False
 sellCNC = False
 sellCRC = False
 sellDBL = False
+sellDEM = False
 sellDGC = False
 sellEMD = False
 sellELC = False
@@ -304,6 +314,8 @@ sellSPT = False
 sellSBC = False
 sellTGC = False
 sellTRC = False
+sellUNO = False
 sellWDC = False
+sellXJO = False
 sellYAC = False
 sellZET = False
