added some coins

--- a/cryptoSwitcher.config.sample
+++ b/cryptoSwitcher.config.sample
@@ -14,6 +14,7 @@ mineAMC = False
 mineANC = False
 mineARG = False
 mineASC = False
+mineAUR = False
 mineBFC = False
 mineBQC = False
 mineBTB = False
@@ -26,6 +27,9 @@ mineCNC = False
 mineCRC = False
 mineDEM = False
 mineDGC = False
+mineDMD = False
+mineDOGE = False
+mineEAC = False
 mineEMD = False
 mineELC = False
 mineEZC = False
@@ -39,9 +43,12 @@ mineHYC = False
 mineKGC = False
 mineLBW = False
 mineLKY = False
+mineLOT = False
 mineLTC = True
+mineMEC = False
 mineMEM = False
 mineMNC = False
+mineMOON = False
 mineNBL = False
 mineNRB = False
 mineNVC = False
@@ -50,6 +57,7 @@ minePXC = False
 mineSPT = False
 mineSBC = False
 mineTGC = False
+mineTIPS = False
 mineTRC = False
 mineUNO = False
 mineWDC = False
@@ -91,6 +99,7 @@ AMCscript =
 ANCscript = 
 ARGscript = 
 ASCscript = 
+AURscript = 
 BFCscript = 
 BQCscript = 
 BTBscript = 
@@ -104,6 +113,9 @@ CRCscript =
 DBLscript = 
 DEMscript = 
 DGCscript = 
+DMDscript = 
+DOGEscript = 
+EACscript = 
 EMDscript = 
 ELCscript = 
 EZCscript = 
@@ -119,10 +131,12 @@ KGCscript =
 JKCscript = 
 LBWscript = 
 LKYscript = 
+LOTscript = 
 LTCscript = ./litecoin.sh
 MECscript = 
 MEMscript = 
 MNCscript = 
+MOONscript = 
 NBLscript = 
 NRBscript = 
 NVCscript = 
@@ -133,6 +147,7 @@ RYCscript =
 SPTscript = 
 SBCscript = 
 TGCscript = 
+TIPSscript = 
 TRCscript = 
 UNOscript = 
 WDCscript = 
@@ -154,6 +169,7 @@ feeAMC = 0
 feeANC = 0
 feeARG = 0
 feeASC = 0
+feeAUR = 0
 feeBFC = 0
 feeBQC = 0
 feeBTB = 0
@@ -167,6 +183,9 @@ feeCRC = 0
 feeDBL = 0
 feeDEM = 0
 feeDGC = 0
+feeDMD = 0
+feeDOGE = 0
+feeEAC = 0
 feeEMD = 0
 feeELC = 0
 feeEZC = 0
@@ -182,10 +201,12 @@ feeKGC = 0
 feeJKC = 0
 feeLBW = 0
 feeLKY = 0
+feeLOT = 0
 feeLTC = 2
 feeMEC = 0
 feeMEM = 0
 feeMNC = 0
+feeMOON = 0
 feeNBL = 0
 feeNRB = 0
 feeNVC = 0
@@ -196,6 +217,7 @@ feeRYC = 0
 feeSPT = 0
 feeSBC = 0
 feeTGC = 0
+feeTIPS = 0
 feeTRC = 0
 feeUNO = 0
 feeWDC = 0
@@ -272,6 +294,7 @@ sellAMC = False
 sellANC = False
 sellARG = False
 sellASC = False
+sellAUR = False
 sellBFC = False
 sellBQC = False
 sellBTB = False
@@ -284,6 +307,9 @@ sellCRC = False
 sellDBL = False
 sellDEM = False
 sellDGC = False
+sellDMD = False
+sellDOGE = False
+sellEAC = False
 sellEMD = False
 sellELC = False
 sellEZC = False
@@ -299,10 +325,12 @@ sellKGC = False
 sellJKC = False
 sellLBW = False
 sellLKY = False
+sellLOT = False
 sellLTC = False
 sellMEC = False
 sellMEM = False
 sellMNC = False
+sellMOON = False
 sellNBL = False
 sellNRB = False
 sellNVC = False
@@ -313,6 +341,7 @@ sellRYC = False
 sellSPT = False
 sellSBC = False
 sellTGC = False
+sellTIPS = False
 sellTRC = False
 sellUNO = False
 sellWDC = False
