added some coins

--- a/cryptoSwitcher.config.sample
+++ b/cryptoSwitcher.config.sample
@@ -38,6 +38,7 @@ mineFRK = False
 mineFST = False
 mineFTC = False
 mineGDC = False
+mineGLC = False
 mineHBN = False
 mineHYC = False
 mineKGC = False
@@ -54,8 +55,9 @@ mineNRB = False
 mineNVC = False
 minePPC = False
 minePXC = False
-mineSPT = False
 mineSBC = False
+mineSPT = False
+mineSXC = False
 mineTGC = False
 mineTIPS = False
 mineTRC = False
@@ -124,6 +126,7 @@ FRKscript =
 FSTscript = 
 FTCscript = 
 GDCscript = 
+GLCscript = 
 GLDscript = 
 HBNscript = 
 HYCscript = 
@@ -144,8 +147,9 @@ PPCscript =
 PWCscript = 
 PXCscript = 
 RYCscript = 
-SPTscript = 
 SBCscript = 
+SPTscript = 
+SXCscript = 
 TGCscript = 
 TIPSscript = 
 TRCscript = 
@@ -194,6 +198,7 @@ feeFRK = 0
 feeFST = 0
 feeFTC = 0
 feeGDC = 0
+feeGLC = 0
 feeGLD = 0
 feeHBN = 0
 feeHYC = 0
@@ -214,8 +219,9 @@ feePPC = 0
 feePWC = 0
 feePXC = 0
 feeRYC = 0
-feeSPT = 0
 feeSBC = 0
+feeSPT = 0
+feeSXC = 0
 feeTGC = 0
 feeTIPS = 0
 feeTRC = 0
@@ -318,6 +324,7 @@ sellFRK = False
 sellFST = False
 sellFTC = False
 sellGDC = False
+sellGLC = False
 sellGLD = False
 sellHBN = False
 sellHYC = False
@@ -338,8 +345,9 @@ sellPPC = False
 sellPWC = False
 sellPXC = False
 sellRYC = False
-sellSPT = False
 sellSBC = False
+sellSPT = False
+sellSXC = False
 sellTGC = False
 sellTIPS = False
 sellTRC = False
