--- a/cryptoSwitcher.config.sample
+++ b/cryptoSwitcher.config.sample
@@ -39,6 +39,7 @@ mineFST = False
 mineFTC = False
 mineGDC = False
 mineGLC = False
+mineGLX = False
 mineHBN = False
 mineHYC = False
 mineKGC = False
@@ -128,6 +129,7 @@ FTCscript =
 GDCscript = 
 GLCscript = 
 GLDscript = 
+GLXscript = 
 HBNscript = 
 HYCscript = 
 KGCscript = 
@@ -200,6 +202,7 @@ feeFTC = 0
 feeGDC = 0
 feeGLC = 0
 feeGLD = 0
+feeGLX = 0
 feeHBN = 0
 feeHYC = 0
 feeKGC = 0
@@ -326,6 +329,7 @@ sellFTC = False
 sellGDC = False
 sellGLC = False
 sellGLD = False
+sellGLX = False
 sellHBN = False
 sellHYC = False
 sellKGC = False
